--- a/contact.html
+++ b/contact.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
-    <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
-    <link href="css/style.css" rel="stylesheet" />
-    <link href="css/responsive.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+    <link href="css/style.css" rel="stylesheet">
+    <link href="css/responsive.css" rel="stylesheet">
     <title>Contact-Us</title>
 </head>
 <body>
@@ -15,8 +15,8 @@
         <div class="header_bottom">
           <div class="container-fluid">
             <nav class="navbar navbar-expand-lg custom_nav-container ">
-              <a class="navbar-brand" href="index.html">
-                <img src="images/logo1-1.png">
+              <a class="navbar-brand" href="landingpage.html">
+                <img src="images/logo1-1.png" alt="">
               </a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class=""> </span>
@@ -24,8 +24,8 @@
   
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ">
-                  <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                  <li class="nav-item ">
+                    <a class="nav-link" href="landingpage.html">Home <span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="about.html"> About</a>
@@ -33,7 +33,7 @@
                   <li class="nav-item">
                     <a class="nav-link" href="service.html">Services</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item active">
                     <a class="nav-link" href="contact.html">Contact Us</a>
                   </li>
                 </ul>
@@ -81,6 +81,84 @@
           </div>
         </div>
       </section>
+      <section class="info_section ">
+        <div class="container">
+          <h4>
+            Get In Touch
+          </h4>
+          <div class="row">
+            <div class="col-lg-10 mx-auto">
+              <div class="info_items">
+                <div class="row">
+                  <div class="col-md-4">
+                    <a href="">
+                      <div class="item ">
+                        <div class="img-box ">
+                          <i class="fa fa-map-marker" aria-hidden="true"></i>
+                        </div>
+                        <p>
+                          Lorem Ipsum is simply dummy text
+                        </p>
+                      </div>
+                    </a>
+                  </div>
+                  <div class="col-md-4">
+                    <a href="">
+                      <div class="item ">
+                        <div class="img-box ">
+                          <i class="fa fa-phone" aria-hidden="true"></i>
+                        </div>
+                        <p>
+                          +212 1234567890
+                        </p>
+                      </div>
+                    </a>
+                  </div>
+                  <div class="col-md-4">
+                    <a href="">
+                      <div class="item ">
+                        <div class="img-box">
+                          <i class="fa fa-envelope" aria-hidden="true"></i>
+                        </div>
+                        <p>
+                          CodeX@gmail.com
+                        </p>
+                      </div>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="social-box">
+          <h4>
+            Follow Us
+          </h4>
+          <div class="box">
+            <a href="">
+              <i class="fa fa-facebook" aria-hidden="true"></i>
+            </a>
+            <a href="">
+              <i class="fa fa-twitter" aria-hidden="true"></i>
+            </a>
+            <a href="">
+              <i class="fa fa-youtube" aria-hidden="true"></i>
+            </a>
+            <a href="">
+              <i class="fa fa-instagram" aria-hidden="true"></i>
+            </a>
+          </div>
+        </div>
+      </section>
+      <footer class="footer_section">
+        <div class="container">
+          <p>
+            &copy; <span id="displayDateYear"></span> All Rights Reserved By
+            <a href="https://html.design/">CODE X @ 2023</a>
+          </p>
+        </div>
+      </footer>
       <script src="js/jquery-3.4.1.min.js"></script>
   <script src="js/bootstrap.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js">
