--- a/contact.html
+++ b/contact.html
@@ -51,18 +51,18 @@
           </div>
           <div class="row">
             <div class="col-md-6">
-              <form action="">
+              <form action="https://formspree.io/f/mwkdwyzw" method="post">
                 <div>
-                  <input type="text" placeholder="Name" />
+                  <input name="name" type="text" placeholder="Name" />
                 </div>
                 <div>
-                  <input type="text" placeholder="Phone Number" />
+                  <input name="phone Number" type="text" placeholder="Phone Number" />
                 </div>
                 <div>
-                  <input type="email" placeholder="Email" />
+                  <input name="email" type="email" placeholder="Email" />
                 </div>
                 <div>
-                  <input type="text" class="message-box" placeholder="Message" />
+                  <input name="messag" type="text" class="message-box" placeholder="Message" />
                 </div>
                 <div class="d-flex ">
                   <button>
@@ -160,10 +160,9 @@
         </div>
       </footer>
       <script src="js/jquery-3.4.1.min.js"></script>
-  <script src="js/bootstrap.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js">
-  </script>
-  <script src="js/custom.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap"></script>
+      <script src="js/bootstrap.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+      <script src="js/custom.js"></script>
+      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap"></script>
 </body>
 </html>
