--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
         <div class="header_bottom">
           <div class="container-fluid">
             <nav class="navbar navbar-expand-lg custom_nav-container ">
-              <a class="navbar-brand" href="landingpage.html">
+              <a class="navbar-brand" href="index.html">
                 <img src="images/logo1-1.png" alt="">
               </a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
