--- a/contact.html
+++ b/contact.html
@@ -73,10 +73,7 @@
             </div>
             <div class="col-md-6">
               <div class="map_container">
-                <div class="map">
-                  <div id="googleMap" style="width:100%;height:100%;"></div>
-                </div>
-              </div>
+                <div class="map"><div id="googleMap" style="width:100%;height:100%;"></div></div>
             </div>
           </div>
       </section>
